@@ -4,23 +4,20 @@ Hash: SHA256
 AUX 50lookup-gentoo.el 155 SHA256 ecdb0ec220b3848384b5f4f57e7f7e902bea7975b3fa17d772337cce51f2b98b SHA512 021e3bd99a25974788966d840cf5ce9359447c1aa331b9ef517aef23c4dc79581539bfd61a5f35f92551a4c189a64867fbf173212d28172e379da3532c1a9694 WHIRLPOOL ca0664da8528298b0eb255b26555c3fb5af92e67fc60ca729df9983f4cbf51c3d617be097b129cbb0c479a02b011a92b528cbff4709dddb322477f706aa39168
 AUX lookup-1.4.1-garbage-char.patch 283 SHA256 2775dc9aa56a4efc32f483651b783e71d3ac1bfa9b7e39e96588f35701cd62f4 SHA512 7e338e2184454579f2e5675e9b969805bd8954fa51fa55a42b62a58094f1f9a1760f1430cb61916bdfd999428f06705f555b6325c993edad7b119e7083325e11 WHIRLPOOL af7a3a5e71927bf3dc6f686c66420b7380d01671180aa0e56f1e5a4f87fb3ad1f31f46f89d2fc93dc65636854ad9350dd79507886219905edd903066a4948d51
 DIST lookup-1.4.1.tar.gz 346391 SHA256 13ab02652e322773f279db1862e4423c24da0da0b662dd6a29dbd95aca729bfa SHA512 a28a770ba58f07db5a7b2452792fc0e83b74e3b45556e84a9729c73773df661dbb7d356c1f7be803feb66f23e154aa825dab610f841bbe655bc76bd7120370bf WHIRLPOOL 2096df15468826cdd69b53210c3e86cd83823dbc4c5cc4b16f438732a4ddc21e902a057f60a5d076b319b977f485a2b7badd5d8983c79c0b04822c8fa0f00746
-EBUILD lookup-1.4.1.ebuild 800 SHA256 d54c6479929fe3886e22d25c634cffe992349015b465999be3510e96271445a0 SHA512 00d06689133c743fd159fc59a8d681bad04dbdba2927b694d598fe9cde8e80f65a94c67031370f2a22b9758188178e0e82b688a3e9903d10169628ce695efe76 WHIRLPOOL 3518071b3eb2ba5e02f83d40224c4cab791266a60eebf503288fcf52af51d6038cdcd0907332c7011672c9208e7f68b116d5935c141dcb2d82560c7b84cea4d3
-MISC ChangeLog 2445 SHA256 b2c5d51370cfc79074c2cc52dec2e3d1482b89bff4897d5bbe6899bb87955a22 SHA512 47ccf4641a44a06de9ba8fc58fbba6bbad8d7ee6636aa8c1558f940b4b694a3da46cf403d9d16c3bdc35c5eed7d4e78000cbf5cff2736428347d71eba3e0e48f WHIRLPOOL ffc567091dc3c5156c5735cd32fc76e46e6cbea41949926a5b64eaaf331c4c0fbae38290cc0988acc5bb2e8fc816b918703f16597c66c4fb4ce4b68d6c328bbe
+EBUILD lookup-1.4.1.ebuild 828 SHA256 69568cec74b8c97274b28cf914a40afad5b179d54be90d17f945df427e498ac1 SHA512 575ad20dde76e1beeb88e3a810d6cade939f0b93ecc5d5502ffba258ae0ec2a319febbb34564e5aa25cfaea6ec5c50c07821d4845b6f02cf93c13aa827668c12 WHIRLPOOL bb8e657a2812a03294cba18730fa79052e75f01aefca9160ff4cc1a8f30f451130272593f497842f3c93e6f3a869259b31662f9d5c8c86ce09683245ef9c2c14
+MISC ChangeLog 2564 SHA256 dd99dc260188c390d41b7a4ecbcfbcf6d8e36c741d9f5e904cc6ca04e318c7fa SHA512 af3e4abd604485d1c344b7907e2fdfc6e8cef4b113c27d87b43cfecb511363afb2565d2bdfee06b3462aa1cb185a4dd08f3fb26ca755fa9661c990daff08c341 WHIRLPOOL 431249e791930c6a6814a546d23aa123fdcf2020bf7248a83b653a5fd731e00213dfd23459bcc34112ba2713c114a68c55b46082dd0c8dc8c6b014aa4e7e7d95
 MISC metadata.xml 175 SHA256 e2e9036049fea5db03defb9ea98a8f5d3ff6cfa8394d226af2eec366d0d9d7ee SHA512 013d8e27b5d70ee9fad253f22952e9de2e6bf3cfb12353f6cd57765c682ce8dd8a2e07c4570081e3d7917722e5d2c3f4725b12e303512be5e496f7632c5aa02f WHIRLPOOL 79a86abd08f3f82d5dc3b2dd980f4c6cc76dde0b103c74ff834021dc53a765ecf188d8cd10a95d9795e35769b7e4fe7ff1b641b72e32d0a97324c7193fe1c088
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2
 
-iQIcBAEBCAAGBQJQdeKxAAoJEDxpGckxwJCBXSsQAIBeJBiiyknvMw3rlvxKMhen
-zUO5XOGXCfSvuoNo3QCP0Q6s5wW2AfAEzfpjbDkuGoSi7WKCeWACeIjMIKmrxbW+
-xBGPsxuy7gkELfE9ZO1Tjlt0UrDtcmBmOXgN5V4E46YDXfXDROE1XuLV2qel+MRI
-pkJEh8Nl6T/dVaP6rlKoXf79v9Yqf7NERXOXUVfg9b/MiSzkWG2cfqqtYcIIY7aD
-h55P7yMoYiUvOOFcWOHrYyGmWdNJtvNa/3jOgyNmq0iy9/6FquCk8A2Y231XWXDJ
-oONulMamIt+XsW32MVZuAzNLhr6UgAy1PSLH4DCpDon8UMNCWedU5R+oyjCK4Mdz
-9hq0NXd++sxe5XeQ6WxbLJyn9eG6zKlaFSapxDZs2WVKNOx5YKInlan3odVYZWLn
-z1LtCRenWSrVccDEUiMVuZmIWlLChr/zXwVeYYnmNgQXI1GF7BdYbK/fkadJPVI0
-66eZzIbHhJCMEdap7lYN2MP7eI3Eqhkr71eIAIRZrYp7RJnfa7Gk55IiC6N9Kn/a
-WXk/uJOz8hsr+p1/xvAErFy44mm7RNwf+AmC44Pp0nz2tkaQ4FfOfYZz+Cf8lHFD
-NFFDi7C/LWyd6kEyQqQOOmzWLFcWOj5EiF21Us5lRY9JV2v0nW7gZYQQp8PV/sGD
-nVDKUaZtQWg9sychj3RV
-=p/qZ
+iQGcBAEBCAAGBQJUACJPAAoJEJQzkH1pP7W4S24L/1qO3P+6PiBPCVW2w7EFZyGR
+7MbNKuWqCdydjv+IqtCgOeWrEzsdh7cwo2BnK9rnmPjMYwKRUECnkWQ0nEjEQr2j
+EpvPCI/xE6PG371UXETEJVKqCoFedfHHb+YTS06O13NUvZT5pQPCNBMLvPC6PL5s
+oLER91/guQKhGwSlYzo2Ns57qzdIJwQviR/NF5OWCCmNovCyy4Fspv9gz1hKwHFR
+soJGXMuUsLFm8A5Ouaoek2NTOh3EDxxTKjr8OHBGcijAjPfkvwulAbf953jLRVrV
+uj19+xMfPOE5hzmDCnRPqBQ3W+Lfc3BLL6+NYoYDYXmfqJdp3TcMcIPb35sTXZly
+ksAeMto2VbJgXnWg3FM038bgC7pRyqRmftGaYlXv+9jhCITJRi2c4p3lFP7293BW
+E8Mt5fC26TmkvSI1KKO1XSpiolSfpFD0E4twcuYQ5AboxbX04pvGkke9d/zDP8rw
+PExXsa5AG4Qvco7OT8rlZQ4tiMjmqtF1hH3Dindkqg==
+=YL4B
 -----END PGP SIGNATURE-----
